--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^12.23.24",
     "lenis": "^1.3.15",
     "lucide-react": "^0.511.0",
+    "maplibre-gl": "^5.12.0",
     "next": "latest",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
